--- a/FxNet.Test.Tests.Integration/FxNet.Test.Tests.Integration.csproj
+++ b/FxNet.Test.Tests.Integration/FxNet.Test.Tests.Integration.csproj
@@ -13,15 +13,19 @@
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.22" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="Testcontainers.PostgreSql" Version="4.9.0" />
-    <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.22" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FxNet.Test.Api\FxNet.Test.Api.csproj" />
     <ProjectReference Include="..\FxNet.Test.Contracts\FxNet.Test.Contracts.csproj" />
+    <ProjectReference Include="..\FxNet.Test.Domain\FxNet.Test.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
